    controls whether user or maintainer documentation is produced.

  * Added http proxy capability through RetsSession::SetProxy.
    Ticket #66

  * Improved exception handling so more detailed error information
    could be returned to .NET languages. Added RetsHttpException
    to handle cURL/http exceptions.
    Modeled on patch supplied by Tony Manhollan.
    Ticket #67.

  * Revised http logging methodology for SWIG bound languages and
    updated developer documentation accordingly. For all SWIG languages,
    RetsSession::SetHttpLogName("log.name") is all that is needed to 
    invoke http logging. Legacy usage is still supported.

  * Revised Librets-Version header to be "X-Librets-Version".

Version 1.2.1 - 25 Jun 2008

  * Add Rets 1.7 support.
    Ticket #39.

  * Metadata field names and reserved values should be case insensitive.
    Ticket #57.

  * Add Perl interface.
    Ticket #52.
    
  * Add PHP interface.  (And added PHP to the windows binary build.)
    Ticket #51.

  * Add JAVA interface. On Unixen, you need to include --with-java-prefix and
    point it to the JDK as in --with-java-prefix=/usr/local/jdk1.6.0.
    Ticket #53.

Version 1.2.0 - 9 May 2008

  * Add "streaming" enhancement. This enhancement improves performance
    for larger fetches at expense of risking timeouts with the RETS server.
    This enhancement moves a significant portion of the search and retrieval
    logic into the SearchResultSet logic. As a result, when the SearchResultSet
    is first returned, it may not have retrieved any data from the RETS server.
    You can only be assured that at least one row has been retrieved by
    calling SearchResultSet::HasNext().
    Ticket #41.

Version 1.1.12 - 6 May 2008

  * Extend XML parsing for metadata to include ISO characters if specified.
    Ticket #54.

Version 1.1.11 - 1 Apr 2008

  * Add SWIG bindings to Autoconf based (unix) build.
    Ticket #31.